--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "graphql": "^16.12.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
